Bug 91423. When recomputing the max width during an inline incremental reflow, we may have to fix-up reflow command chain. Specifically, we may have to replace a continuing frame in the chain with its primary frame, because the continuing frame will be destroyed during the unconstrained reflow used to compute the max width. r=dbaron, sr=attinasi